--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -143,8 +143,9 @@
              </section>
          </div>
          <div data-anchor="projects" class="mb-8 projects-section">
-             <section class="projects">
-                 <div class="projects__button-anchor">
+             <section class="projects isSelected">
+                 <div class="fullscreen-projects"></div>
+                 <!--<div class="projects__button-anchor">
                      <div class="main-view__button-text-wrapper">
                          <div class="main-view__button-text">смотреть<br>проекты</div>
                      </div>
@@ -159,7 +160,7 @@
                      <div class="animation-button-height animation-height">
                          <div class="round-button"></div>
                      </div>
-                 </div>
+                 </div>-->
                  <div class="projects-top black-header">
                      <div class="projects-top__content">
                          <div class="animation-slide-down__container">
@@ -692,7 +693,7 @@
              </section>
          </div>
          <div class="fade-in mb-8" data-anchor="specialists">
-             <section class="specialists">
+             <section class="specialists main">
                  <div class="specialists__scroll">
                      <div class="specialists__container">
                          <div class="specialists__gray-line"><div class="gray-line"></div></div>
@@ -1053,7 +1054,7 @@
              </section>
          </div>
          <div animation-mob-steps="2" animation-step="0" data-anchor="piter" class="mb-8 fade-in">
-             <section class="piter">
+             <section class="piter main">
                  <div class="piter__scroll">
                      <div class="piter__container">
                          <div class="piter__gray-line"><div class="gray-line"></div></div>
