--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -166,6 +166,28 @@
                                     <div class="prices-design__field slide-left-in-view">Планировки с расстановкой мебели</div>
                                     <div class="prices-design__field slide-left-in-view">До 3-х вариантов</div>
                                 </div>
+                                <div class="primary-button__wrapper">
+                                    <a href="#" class="primary-button">
+                                        <div class="slide-up-in-view__container">
+                                            <div class="primary-button__text slide-up-in-view duration-1">
+                                                <div class="primary-button__text-animation">скачать пример</div>
+                                            </div>
+                                        </div>
+                                        <div class="primary-button__circle-anchor">
+                                            <div class="primary-button__circle-animation">
+                                                <div class="primary-button__circle"></div>
+                                            </div>
+                                        </div>
+                                        <div class="slide-up-in-view__container">
+                                            <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                                                <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                    <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                             <div class="prices-design__img">
                                 <div class="prices-design__img-animation">
@@ -194,7 +216,11 @@
                                     <div class="prices-design__field slide-left-in-view">Планировки</div>
                                     <div class="prices-design__field slide-left-in-view">Визуализации</div>
                                     <div class="prices-design__field slide-left-in-view">Чертежи</div>
-                                    <div class="prices-design__field slide-left-in-view">Ведомости отделки (без подбора)</div>
+                                    <div class="prices-design__field slide-left-in-view">Ведомости отделки <span class="gray-text">(без подбора)</span></div>
+                                </div>
+                                <div class="prices-design__text-box slide-up-in-view">
+                                    Комплектация и авторский надзор<br>
+                                    заказываются отдельно
                                 </div>
                             </div>
                             <div class="prices-design__img">
@@ -208,14 +234,14 @@
                                 <div class="prices-design__name">
                                     <div class="slide-down-in-view__container">
                                         <div class="slide-down-in-view duration-1">
-                                            Планировка
+                                            Проект и реализация под ключ
                                         </div>
                                     </div>
                                 </div>
                                 <div class="prices-design__price">
                                     <div class="slide-up-in-view__container">
                                         <div class="slide-up-in-view duration-1">
-                                            7 000 ₽ / м2
+                                            55 000 ₽ / м2
                                         </div>
                                     </div>
                                 </div>
@@ -224,6 +250,9 @@
                                     <div class="prices-design__field slide-left-in-view">Обмер</div>
                                     <div class="prices-design__field slide-left-in-view">Планировки с расстановкой мебели</div>
                                     <div class="prices-design__field slide-left-in-view">До 3-х вариантов</div>
+                                </div>
+                                <div class="prices-design__text-box slide-up-in-view">
+                                    *  срок рассчитывается индивидуально
                                 </div>
                             </div>
                             <div class="prices-design__img">
@@ -258,6 +287,11 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="price-supervision__img">
+                            <div class="price-supervision__img-animation">
+                                <img class="scale-into-view white-header" src="../assets/images/price-vision.png" alt="">
+                            </div>
+                        </div>
                         <div class="price-supervision__text">
                             <div class="slide-up-in-view__container">
                                 <div class="slide-up-in-view duration-1">
@@ -268,12 +302,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="price-supervision__img">
-                        <div class="price-supervision__img-animation">
-                            <img class="scale-into-view white-header" src="../assets/images/price-vision.png" alt="">
-                        </div>
-                    </div>
-                    <div class="price-supervision__gray-line"></div>
+                    <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
                     <div class="price-supervision__button-anchor black-button">
                         <div class="main-view__button-text-wrapper">
                             <div class="main-view__button-text">ознакомиться <br>с услугой</div>
@@ -294,13 +323,13 @@
             </div>
         </section>
     </div>
-    <div data-anchor="price-assembly">
+    <div class="mb-8" data-anchor="price-assembly">
         <section class="price-assembly">
             <div class="price-assembly__scroll">
                 <div class="price-assembly__content">
-                    <div class="price-supervision__img">
+                    <div class="price-supervision__img scale-into-view">
                         <div class="price-supervision__img-animation">
-                            <img class="scale-into-view white-header" src="../assets/images/price-assembly.png" alt="">
+                            <img class="white-header" src="../assets/images/price-assembly.png" alt="">
                         </div>
                     </div>
                     <div class="price-assembly__right">
@@ -344,7 +373,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="price-assembly__gray-line"></div>
+                    <div class="price-assembly__gray-line"><div class="gray-line"></div></div>
                     <div class="price-assembly__button-anchor black-button">
                         <div class="main-view__button-text-wrapper">
                             <div class="main-view__button-text">ознакомиться <br>с услугой</div>
@@ -365,7 +394,7 @@
             </div>
         </section>
     </div>
-    <div animation-mob-steps="3" animation-step="0" class="animation-state-0" data-anchor="prices-architecture">
+    <div animation-mob-steps="3" animation-step="0" class="mb-8" data-anchor="prices-architecture">
         <section class="prices-design">
             <div class="prices-design__scroll">
                 <div class="prices-design__content">
