--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -153,7 +153,7 @@
                     <div class="project-details__top">
                         <div class="project-details__title">
                             <div class="slide-down-in-view__container">
-                                <div class="slide-down-in-view150 duration-1">
+                                <div class="slide-down-in-view duration-1">
                                     детально<br>
                                     о реализации проекта<br>
                                     White Khamovniki
@@ -193,22 +193,14 @@
                                     <img class="scale-into-view white-header" src="../assets/images/project-details2.png" alt="">
                                 </div>
                             </div>
-                        </div>
-                        <div class="project-details__middle">
-                            <div class="project-details__middle-animation">
-                                <img class="scale-into-view white-header" src="../assets/images/project-details1.png" alt="">
-                            </div>
-                        </div>
-                        <div class="project-details__right">
                             <div class="project-details__right-text">
                                 <div class="slide-down-in-view__container">
                                     <div class="slide-down-in-view duration-1">
-                                Это по-настоящему мужской проект, отвечающий самым взыскательным требованиям заказчика. В оформлении квартиры использована итальянская мебель и эксклюзивные авторские арт-объекты. Отдельно стоит отметить отделку из натурального камня – с его применением облицованы стены и пол в ванной
-                                и душевой.
+                                        Это по-настоящему мужской проект, отвечающий самым взыскательным требованиям заказчика. В оформлении квартиры использована итальянская мебель и эксклюзивные авторские арт-объекты. Отдельно стоит отметить отделку из натурального камня – с его применением облицованы стены и пол в ванной
+                                        и душевой.
                                     </div>
                                 </div>
                             </div>
-                            <div class="project-details__right-spacer"></div>
                             <div class="project-details__right-text">
                                 <div class="slide-down-in-view__container">
                                     <div class="slide-down-in-view duration-1">
@@ -218,11 +210,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-details__middle">
+                        <div class="project-details__middle-animation">
+                            <img class="scale-into-view white-header" src="../assets/images/project-details1.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
-    <div data-anchor="project-description">
+    <div class="mb-8" data-anchor="project-description">
         <section class="project-description">
             <div class="project-description__content">
                 <div class="project-description__gray-line"></div>
@@ -251,7 +248,7 @@
                 <div class="project-description__container">
                     <div class="project-description__text">
                         <div class="slide-down-in-view__container">
-                            <div class="slide-down-in-view150 duration-1">
+                            <div class="slide-down-in-view duration-1">
                                 Современный дизайн-проект интерьера квартиры в Москве.<br>
                                 Лаконичность, функциональность и изысканная брутальность –<br>
                                 именно так можно описать эту квартиру площадью 55 кв м,<br>
@@ -261,6 +258,26 @@
                         </div>
                     </div>
                 </div>
+
+            </div>
+            <div class="preoject-description__button">
+                <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
+                <div class="price-supervision__button-anchor black-button">
+                    <div class="main-view__button-text-wrapper">
+                        <div class="main-view__button-text">оставить <br>заявку</div>
+                    </div>
+                    <div class="main-view__arrow-wrapper">
+                        <div class="main-view__arrow">
+                            <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="animation-button-height animation-height">
+                        <div class="round-button"></div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
@@ -268,6 +285,7 @@
         <section class="project-gallery">
             <div class="project-gallery__container">
                 <div class="project-gallery__container-animation">
+                    <!--
                     <div class="project-gallery__content">
                         <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation plan">
@@ -277,7 +295,7 @@
                         <div class="project-gallery__planning">
                             <div class="project-gallery__title">
                                 <div class="slide-down-in-view__container">
-                                    <div class="slide-down-in-view150 duration-1">
+                                    <div class="slide-down-in-view duration-1">
                                         Планировка,<br>
                                         которой мы<br>
                                         городимся
@@ -295,6 +313,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                     <div class="project-gallery__content">
                         <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
