--- a/src/pages/service-architecture.html
+++ b/src/pages/service-architecture.html
@@ -214,6 +214,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                     <div class="services-desc__bottom">
                                         <div class="services-desc__bottom-text">
                                             <div class="slide-up-in-view__container">
@@ -302,7 +303,7 @@
                         </div>
                     </div>
                     <div class="project-support__gray-line"></div>
-                    <div class="project-support__content">
+                    <div class="project-support__content np">
                         <div class="project-support__img">
                             <div class="project-support__img-animation">
                                 <img class="scale-into-view white-header" src="../assets/images/support.png" alt="">
@@ -327,26 +328,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="services-desc__bottom">
-                                <div class="services-desc__bottom-text">
-                                    <div class="slide-up-in-view__container">
-                                        <div class="slide-up-in-view duration-1">
-                                            Стоимость<br>
-                                            сопровождения проекта
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="services-desc__bottom-price">
-                                    <div class="slide-up-in-view__container">
-                                        <div class="slide-up-in-view duration-1">
-                                            от 150 000 ₽ / месяц
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-support__right">
-                            <div class="project-support__gray-line-vertical"></div>
                             <div class="project-support__item scale-into-view">
                                 <div class="slide-down-in-view__container">
                                     <div class=" duration-1">
@@ -366,14 +347,107 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="services-desc__bottom">
+                            <div class="services-desc__bottom-text">
+                                <div class="slide-up-in-view__container">
+                                    <div class="slide-up-in-view duration-1">
+                                        Стоимость<br>
+                                        сопровождения проекта
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="services-desc__bottom-price">
+                                <div class="slide-up-in-view__container">
+                                    <div class="slide-up-in-view duration-1">
+                                        от 150 000 ₽ / месяц
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </div>
+    <div class="premium-service">
+        <div class="premium-service__top">
+            <div class="premium-service__label slide-down-in-view">преимущества работы с нами</div>
+            <div class="premium-service__title slide-up-in-view">Премиальный сервис с заботой о вас</div>
+            <a href="#" class="primary-button">
+                <div class="slide-up-in-view__container">
+                    <div class="primary-button__text slide-up-in-view duration-1">
+                        <div class="primary-button__text-animation">Познакомьтесь с ценами</div>
+                    </div>
+                </div>
+                <div class="primary-button__circle-anchor">
+                    <div class="primary-button__circle-animation">
+                        <div class="primary-button__circle"></div>
+                    </div>
+                </div>
+                <div class="slide-up-in-view__container">
+                    <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="premium-service-slider__wrapper scale-into-view">
+            <div class="swiper premium-service-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="premium-service__bottom">
+            <div class="premium-service__bottom-title scale-into-view">
+                Цельность проекта
+            </div>
+            <div class="premium-service__bottom-text scale-into-view">
+                Полная гармония внешнего
+                и внутреннего облика, так как архитектура и интерьер разрабатываются одной командой. Это создаёт единый концепт, соответствующий вашему видению.
+            </div>
+            <div class="swiper__navigation-box scale-into-view">
+                <div class="premium-service-swiper__prev">
+                    <svg class="icon-arrow-left" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M20.5 12.5H3.67" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div class="premium-service-swiper__next">
+                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
     <div data-anchor="projects" class="mb-8 projects-section">
-        <section class="projects">
-            <div class="projects__button-anchor">
+        <section class="projects isSelected">
+            <div class="fullscreen-projects"></div>
+            <!--<div class="projects__button-anchor">
                 <div class="main-view__button-text-wrapper">
                     <div class="main-view__button-text">смотреть<br>проекты</div>
                 </div>
@@ -388,7 +462,7 @@
                 <div class="animation-button-height animation-height">
                     <div class="round-button"></div>
                 </div>
-            </div>
+            </div>-->
             <div class="projects-top black-header">
                 <div class="projects-top__content">
                     <div class="animation-slide-down__container">
@@ -631,7 +705,7 @@
         </section>
     </div>
     <div data-anchor="faq">
-        <section class="faq">
+        <section class="faq with-image">
             <div class="faq__scroll">
                 <div class="faq__content">
                     <div class="faq__left">
@@ -814,7 +888,7 @@
                         <div class="services-list">
                             <div class="services-list__item mb-4">
                                 <div class="services-list__item-animation">
-                                    <div class="services-list__img-wrapper">
+                                    <div class="services-list__img-wrapper white-header">
                                         <img src="../assets/images/service1.png" alt="">
                                     </div>
                                     <div class="services-list__name">Дизайн интерьера</div>
@@ -839,20 +913,103 @@
                                     <div class="services-list__description">Обеспечение материалами, мебелью, декором</div>
                                 </div>
                             </div>
-                            <div class="services-list__item">
+                            <div class="services-list__item mb-4 text-block">
                                 <div class="services-list__item-animation">
-                                    <div class="services-list__img-wrapper">
-                                        <img src="../assets/images/service4.png" alt="">
+                                    <div class="services-list__name">
+                                        Мы создаем вечно
+                                        ценные интерьеры
+                                        и архитектуру, игнорируя быстротечные тренды
                                     </div>
-                                    <div class="services-list__name">Архитектура</div>
-                                    <div class="services-list__description">Полный спектр архитектурного проектирования</div>
+                                    <div class="services-list__description">
+                                        Мы
+                                        придерживаемся архитектурного подхода. Это выражается в нашем подходе к проекти-рованию. Мы создаем формы, объема, а не решаем каждую стену отдельно декоративными способами
+                                    </div>
                                 </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="preoject-description__button">
+                        <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
+                        <div class="price-supervision__button-anchor black-button">
+                            <div class="main-view__button-text-wrapper">
+                                <div class="main-view__button-text">закажите <br>звонок<br> в удобное<br>для вас время</div>
+                            </div>
+                            <div class="main-view__arrow-wrapper">
+                                <div class="main-view__arrow">
+                                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="animation-button-height animation-height">
+                                <div class="round-button"></div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
+    </div>
+    <div class="arch-project">
+        <div class="arch-project__img scale-into-view">
+            <img src="../assets/images/arch-pr.png" alt="">
+        </div>
+        <div class="arch-project__content">
+            <div class="arch-project__title slide-down-in-view">
+                Архитектурное проектирование: идеальные дома
+                с эргономикой
+                и стилем
+            </div>
+            <div class="arch-project__gray-line scale-into-view"></div>
+            <div class="arch-project__text slide-up-in-view">
+                Профессиональная разработка архитектурных проектов – это первый и самый важный этап
+                в создании комфортного, функционального и эстетичного пространства. Мы разрабатываем индивидуальные архитектурные решения для частных домов, коммерческих зданий и общественных пространств, учитывая все современные строительные нормы и технологии.
+            </div>
+            <div class="arch-project__h2 slide-down-in-view">Что входит в архитектурное проектирование?</div>
+            <div class="arch-project__text slide-up-in-view">
+                Наша команда архитекторов и дизайнеров сопровождает проект на всех этапах, начиная
+                с концепции и заканчивая рабочей документацией.
+                В комплекс услуг входит:
+                <div class="arch-project__text-list">
+                    <div class="arch-project__text-list-item">
+                        Разработка концепции здания с учетом ваших пожеланий и функциональных требований;
+                    </div>
+                    <div class="arch-project__text-list-item">
+                        Подготовка архитектурных чертежей (планы, фасады, разрезы, узлы);
+                    </div>
+                    <div class="arch-project__text-list-item">
+                        Инженерные расчеты и конструктивные решения;
+                    </div>
+                    <div class="arch-project__text-list-item">
+                        Подбор материалов и создание 3D-визуализации проекта;
+                    </div>
+                    <div class="arch-project__text-list-item">
+                        Подготовка документации для согласования и получения разрешений на строительство.
+                    </div>
+                </div>
+            </div>
+            <div class="arch-project__h2 slide-down-in-view">Для кого подходит услуга?</div>
+            <div class="arch-project__text slide-up-in-view">
+                <div class="arch-project__text-list">
+                    <div class="arch-project__text-list-item">
+                        Владельцы частных домов и загородных коттеджей, мечтающие о стильном и продуманном жилье.
+                    </div>
+                    <div class="arch-project__text-list-item">
+                        Девелоперы и застройщики, которым нужны современные архитектурные решения для жилых и коммерческих объектов.
+                    </div>
+                    <div class="arch-project__text-list-item">
+                        Инвесторы, заинтересованные в создании функциональных и эстетичных пространств для аренды или продажи.
+                    </div>
+                </div>
+            </div>
+            <div class="arch-project__h2 slide-down-in-view">Почему важно доверить архитектурный проект профессионалам?</div>
+            <div class="arch-project__text slide-up-in-view">
+                Архитектура — это не просто чертежи и красивые фасады, а комплексное проектирование, где продумана каждая деталь: от удобства планировки до безопасности конструкций. Ошибки на этапе проектирования могут привести к удорожанию строительства, снижению эксплуатационных характеристик и даже необходимости переделок. Наши специалисты создают проекты, которые сочетают эстетику, эргономику и современные строительные технологии, обеспечивая долговечность, комфорт и энергоэффективность вашего дома или здания.
+            </div>
+        </div>
     </div>
     <div animation-mob-steps="2" animation-step="0" class="fade-in" data-anchor="feedback">
         <section class="feedback">
