--- a/src/pages/service-vision.html
+++ b/src/pages/service-vision.html
@@ -183,15 +183,10 @@
             </div>
         </section>
     </div>
-    <div data-anchor="design-steps">
-        <section class="design-steps">
+    <div class="mb-8" data-anchor="design-steps">
+        <section class="design-steps compl">
             <div class="design-steps__scroll">
                 <div class="design-steps__content img no-padding">
-                    <div class="design-steps__img scale-in-view white-header">
-                        <div class="design-steps__img-animation">
-                            <img src="../assets/images/vision-steps.png" alt="">
-                        </div>
-                    </div>
                     <div class="design-steps__top-1">
                         <div class="design-steps__top-text">
                             <div class="slide-down-in-view__container">
@@ -248,13 +243,43 @@
                             </div>
                         </div>
                     </div>
+                    <div class="design-steps__img scale-in-view white-header">
+                        <div class="design-steps__img-animation">
+                            <img src="../assets/images/vision-steps.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
+    <div class="projects-link">
+        <div class="projects-link__bg scale-into-view">
+            <img src="../assets/images/projects-link.png" alt="">
+        </div>
+        <div class="preoject-description__button">
+            <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
+            <div class="price-supervision__button-anchor">
+                <div class="main-view__button-text-wrapper">
+                    <div class="main-view__button-text">познвкомьтесь <br>с нашими<br> проектами</div>
+                </div>
+                <div class="main-view__arrow-wrapper">
+                    <div class="main-view__arrow">
+                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
+                    </div>
+                </div>
+                <div class="animation-button-height animation-height">
+                    <div class="round-button"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div data-anchor="projects" class="mb-8 projects-section">
-        <section class="projects">
-            <div class="projects__button-anchor">
+        <section class="projects isSelected">
+            <div class="fullscreen-projects"></div>
+            <!--<div class="projects__button-anchor">
                 <div class="main-view__button-text-wrapper">
                     <div class="main-view__button-text">смотреть<br>проекты</div>
                 </div>
@@ -269,10 +294,10 @@
                 <div class="animation-button-height animation-height">
                     <div class="round-button"></div>
                 </div>
-            </div>
+            </div>-->
             <div class="projects-top black-header">
                 <div class="projects-top__content">
-                    <div class="slide-down-in-view__container">
+                    <div class="animation-slide-down__container">
                         <div class="projects-top__title  slide-down-in-view150 duration-1">
                             Познакомьтесь<br>
                             с нашими проектами<br>
@@ -280,13 +305,13 @@
                         </div>
                     </div>
                     <div class="projects-top__right">
-                        <div class="slide-down-in-view__container">
+                        <div class="animation-slide-down__container">
                             <div class="projects-top__sub-title slide-down-in-view duration-1">
                                 Создали и реализовали более 90 проектов
                             </div>
                         </div>
                         <div class="projects-top__spacer"></div>
-                        <div class="slide-down-in-view__container">
+                        <div class="animation-slide-down__container">
                             <div class="projects-top__text slide-down-in-view duration-1">
                                 Дизайн проект полностью уникален, учитываются все Ваши<br>
                                 пожелания, и в итоге, Вы получаете визуализации своего дома,<br>
@@ -695,20 +720,11 @@
                         <div class="services-list">
                             <div class="services-list__item mb-4">
                                 <div class="services-list__item-animation">
-                                    <div class="services-list__img-wrapper">
+                                    <div class="services-list__img-wrapper white-header">
                                         <img src="../assets/images/service1.png" alt="">
                                     </div>
                                     <div class="services-list__name">Дизайн интерьера</div>
                                     <div class="services-list__description">Комплексная услуга по дизайну интерьера</div>
-                                </div>
-                            </div>
-                            <div class="services-list__item mb-4">
-                                <div class="services-list__item-animation">
-                                    <div class="services-list__img-wrapper">
-                                        <img src="../assets/images/service2.png" alt="">
-                                    </div>
-                                    <div class="services-list__name">Авторский надзор</div>
-                                    <div class="services-list__description">Контроль реализации проекта </div>
                                 </div>
                             </div>
                             <div class="services-list__item">
@@ -729,9 +745,43 @@
                                     <div class="services-list__description">Полный спектр архитектурного проектирования</div>
                                 </div>
                             </div>
+                            <div class="services-list__item mb-4 text-block">
+                                <div class="services-list__item-animation">
+                                    <div class="services-list__name">
+                                        Мы создаем вечно
+                                        ценные интерьеры
+                                        и архитектуру, игнорируя быстротечные тренды
+                                    </div>
+                                    <div class="services-list__description">
+                                        Мы
+                                        придерживаемся архитектурного подхода. Это выражается в нашем подходе к проекти-рованию. Мы создаем формы, объема, а не решаем каждую стену отдельно декоративными способами
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="preoject-description__button">
+                        <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
+                        <div class="price-supervision__button-anchor black-button">
+                            <div class="main-view__button-text-wrapper">
+                                <div class="main-view__button-text">закажите <br>звонок<br> в удобное<br>для вас время</div>
+                            </div>
+                            <div class="main-view__arrow-wrapper">
+                                <div class="main-view__arrow">
+                                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="animation-button-height animation-height">
+                                <div class="round-button"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
     </div>
